TestRepo2/src/objects/Content_Property__c.object
<CustomObject>
    <fields>
        <fullName>Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Calendar</label>
        <referenceTo>Calendar__c</referenceTo>
        <relationshipLabel>Content Properties</relationshipLabel>
        <relationshipName>Content_Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Brand Marketing Information</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly Execution Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Images &amp; Logos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selling Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovation, Sustainovation &amp; VAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multicultural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovation, Sustainovation &amp; Vintage Transition</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Content_Description__c</fullName>
        <label>Content Description</label>
        <referenceTo>Content_Description__c</referenceTo>
        <relationshipLabel>Content Properties</relationshipLabel>
        <relationshipName>Content_Properties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Selling_Materials_Classification_Row_1__c</fullName>
        <label>Selling Materials Classification Row 1</label>
        <picklist>
            <controllingField>Sub_Sub_Category__c</controllingField>
            <picklistValues>
                <fullName>Execution Brief</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Execution Standards – Off Premise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Execution Standards – On Premise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Execution Standards – Monthly Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selling Deck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fact Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preliminary Long Lead Deck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Selling Deck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Sell Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecasting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Mailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Overview</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Selling_Materials_Classification_Row_2__c</fullName>
        <label>Selling Materials Classification Row 2</label>
        <picklist>
            <controllingField>Sub_Sub_Category__c</controllingField>
            <picklistValues>
                <fullName>Integrated National Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display/Visibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAP</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>Selling Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly Selling Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fact Sheets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wine Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selling Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drink Shots</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Shots</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Images</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping Details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success Stories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Updates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning Calendars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Creative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visibility Tracking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selling Standards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly Programming Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Fact Sheets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Programming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best Practices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Sub_Category__c</fullName>
        <label>Sub Sub Category</label>
        <picklist>
            <controllingField>Sub_Category__c</controllingField>
            <picklistValues>
                <fullName>Display &amp; Merchandising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovations Sell Sheets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Launch Decks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Sell Sheets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Premise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Premise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plannograms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Brief</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Execution Standards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rums and Cordials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Whiskies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vodkas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gin and Cocktails</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tequilas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV Commercials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow Charts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sizzle Reels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preliminary Long Lead Deck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Launch Deck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Fact Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Deck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Mailers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logo Shots</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Sub_Sub_Category__c</fullName>
        <label>Sub Sub Sub Category</label>
        <picklist>
            <controllingField>Sub_Sub_Category__c</controllingField>
            <picklistValues>
                <fullName>Assortment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Fact Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Card / Hot Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category Selling Stories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocktails on Tap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diageo Monthly PR Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display &amp; Merchandising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge and Best Practices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Launch Sell Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Selling Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multicultural Selling Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preliminary Long Lead Deck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process and Governance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Execution Brief</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Execution Standards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotional Strategies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retailer Mailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Standards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selling Deck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelf Principles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelf Standards &amp; Planograms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tasting Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vision and Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>World Class 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Selling Deck</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Content Property</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Calendar__c</columns>
        <columns>Content_Description__c</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>Sub_Sub_Category__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Brand_Marketing_Information</fullName>
        <columns>NAME</columns>
        <columns>Content_Description__c</columns>
        <columns>Calendar__c</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>Sub_Sub_Category__c</columns>
        <columns>Sub_Sub_Sub_Category__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Brand Marketing Information</value>
        </filters>
        <label>All - Brand Marketing Information</label>
    </listViews>
    <listViews>
        <fullName>All_Innovation_Sustainovation_VAP</fullName>
        <columns>NAME</columns>
        <columns>Content_Description__c</columns>
        <columns>Calendar__c</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>Sub_Sub_Category__c</columns>
        <columns>Sub_Sub_Sub_Category__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>&quot;Innovation, Sustainovation &amp; VAP&quot;</value>
        </filters>
        <label>All - Innovation, Sustainovation &amp; VAP</label>
    </listViews>
    <listViews>
        <fullName>All_Monthly_Execution_Plan</fullName>
        <columns>NAME</columns>
        <columns>Content_Description__c</columns>
        <columns>Calendar__c</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>Sub_Sub_Category__c</columns>
        <columns>Sub_Sub_Sub_Category__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Monthly Execution Plan</value>
        </filters>
        <label>All - Monthly Execution Plan</label>
    </listViews>
    <listViews>
        <fullName>All_Multicultural</fullName>
        <columns>NAME</columns>
        <columns>Content_Description__c</columns>
        <columns>Calendar__c</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>Sub_Sub_Category__c</columns>
        <columns>Sub_Sub_Sub_Category__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Multicultural</value>
        </filters>
        <label>All - Multicultural</label>
    </listViews>
    <listViews>
        <fullName>All_PIL</fullName>
        <columns>NAME</columns>
        <columns>Content_Description__c</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>Sub_Sub_Category__c</columns>
        <columns>Sub_Sub_Sub_Category__c</columns>
        <columns>Calendar__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Product Images &amp; Logos</value>
        </filters>
        <label>All - Product Images &amp; Logos</label>
    </listViews>
    <listViews>
        <fullName>All_Selling_Materials</fullName>
        <columns>Content_Description__c</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>Sub_Sub_Category__c</columns>
        <columns>Sub_Sub_Sub_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Selling Materials</value>
        </filters>
        <label>All - Selling Materials</label>
    </listViews>
    <listViews>
        <fullName>All_missing_content</fullName>
        <columns>NAME</columns>
        <columns>Content_Description__c</columns>
        <columns>Calendar__c</columns>
        <columns>Category__c</columns>
        <columns>Sub_Category__c</columns>
        <columns>Sub_Sub_Category__c</columns>
        <columns>Sub_Sub_Sub_Category__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Content_Description__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Sub_Sub_Category__c</field>
            <operation>notEqual</operation>
            <value>TV Commercials,Sizzle Reels,Radio</value>
        </filters>
        <label>All X Missing Content</label>
    </listViews>
    <nameField>
        <label>Content Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Content Properties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>EndDateRequired</fullName>
        <active>true</active>
        <description>If category was set to &apos;Brand Marketing Information&apos; or &apos;Selling materials&apos;  start and end date is required.</description>
        <errorConditionFormula>AND (OR (ISPICKVAL(Category__c ,  &apos;Brand Marketing Information&apos;), ISPICKVAL(Category__c , &apos;Selling Materials&apos; )), ISBLANK(End_Date__c ))</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End Date is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartDateLowerThanEndDate</fullName>
        <active>true</active>
        <description>Start date must be lower than end date</description>
        <errorConditionFormula>Start_Date__c &gt; End_Date__c</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Start Date must be lower than End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartDateRequired</fullName>
        <active>true</active>
        <description>If category was set to &apos;Brand Marketing Information&apos; or &apos;Selling materials&apos;  start and end date is required.</description>
        <errorConditionFormula>AND (OR (ISPICKVAL(Category__c ,  &apos;Brand Marketing Information&apos;), ISPICKVAL(Category__c , &apos;Selling Materials&apos; )), ISBLANK(Start_Date__c ))</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Start Date is required</errorMessage>
    </validationRules>
</CustomObject>